Minor: Java 8 compatibility